# privacy-distillation

./: README.md  annotator.py  create_dataset.py  evaluate_model.py  model_training.py  pyproject.toml  run_experiments.py  tab_exp.py  utils.py
survey_data/: llm_improved_combined.csv  survey_results.csv  text_idx.json  texts.json
