[project]
name = "privacy-distillation"
version = "1.0.0"
description = "Distilling Human-Aligned Privacy Sensitivity Assessment from Large Language Models"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "krippendorff>=0.6.0",
    "dspy>=3.1.0",
    "tqdm>=4.66.0",
    "pyarrow>=15.0.0",
]
